# My_Bot

./: Bot_diagrama.drawio  Dockerfile  README.md  Sort_Files.py  factorize.py  main_code_bot.py  my_classes.py  nagini_bot-0.1.5-py3-none-any.whl  pyproject.toml  Диаграмма без названия.drawio
